--- a/WHExplorer/Xplorer.vbproj
+++ b/WHExplorer/Xplorer.vbproj
@@ -167,6 +167,7 @@
     <Compile Include="frmUserManagement.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Functions\DataGridViewFunctions.vb" />
     <Compile Include="Functions\DescriptionConstructor.vb" />
     <Compile Include="Functions\EditExistFunctions.vb" />
     <Compile Include="Functions\FileSystemFunct.vb" />
