--- a/WHExplorer/Xplorer.vbproj
+++ b/WHExplorer/Xplorer.vbproj
@@ -167,6 +167,12 @@
     <Compile Include="frmModDetails.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmSpecialUser.Designer.vb">
+      <DependentUpon>frmSpecialUser.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmSpecialUser.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmUserManagement.Designer.vb">
       <DependentUpon>frmUserManagement.vb</DependentUpon>
     </Compile>
@@ -215,6 +221,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmModDetails.resx">
       <DependentUpon>frmModDetails.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSpecialUser.resx">
+      <DependentUpon>frmSpecialUser.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmUserManagement.resx">
       <DependentUpon>frmUserManagement.vb</DependentUpon>
