Issue #12: Inserimento nuovo documento - work in progress
Aggiunto il form per inserimento nuovo documento.
Gestito il popolamento della combobox "tipologia documento".
Gestita la selezione del file da caricare.
Gestita la ricerca ed il popolamento del datagridview di connessione a componente esistente.

--- a/WHExplorer/Xplorer.vbproj
+++ b/WHExplorer/Xplorer.vbproj
@@ -167,6 +167,12 @@
     <Compile Include="frmModDetails.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmNewDocument.Designer.vb">
+      <DependentUpon>frmNewDocument.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmNewDocument.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmSpecialUser.Designer.vb">
       <DependentUpon>frmSpecialUser.vb</DependentUpon>
     </Compile>
@@ -221,6 +227,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmModDetails.resx">
       <DependentUpon>frmModDetails.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNewDocument.resx">
+      <DependentUpon>frmNewDocument.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSpecialUser.resx">
       <DependentUpon>frmSpecialUser.vb</DependentUpon>
