Issue#12: Inserimento nuovo documento - work in progress
Fatti grossi casini, riscritta la parte di inserimento di un nuovo documento: completamente da rivedere, sia come codice che come filosofia...

--- a/WHExplorer/Xplorer.vbproj
+++ b/WHExplorer/Xplorer.vbproj
@@ -187,6 +187,7 @@
     </Compile>
     <Compile Include="Functions\DataGridViewFunctions.vb" />
     <Compile Include="Functions\DescriptionConstructor.vb" />
+    <Compile Include="Functions\DocumentManagementFunctions.vb" />
     <Compile Include="Functions\EditExistFunctions.vb" />
     <Compile Include="Functions\FileSystemFunct.vb" />
     <Compile Include="Functions\GeneralAuxFunctions.vb" />
