--- a/WHExplorer/Xplorer.vbproj
+++ b/WHExplorer/Xplorer.vbproj
@@ -148,6 +148,12 @@
     <Compile Include="frmChangePassword.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmDocMigrationRun.Designer.vb">
+      <DependentUpon>frmDocMigrationRun.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmDocMigrationRun.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmMain.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -219,6 +225,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmChangePassword.resx">
       <DependentUpon>frmChangePassword.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDocMigrationRun.resx">
+      <DependentUpon>frmDocMigrationRun.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.vb</DependentUpon>
